# mcp-doctor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REGISTRY.md  SECURITY.md  glama.json  pyproject.toml
.github/workflows/: ci.yml  mcp-scan-action.yml  publish-pypi.yml  security-scan.yml
mcp_doctor/: __init__.py  cli.py  registry.py  scanner.py  scorer.py
memory/: mcp-doctor-marketing.md
tests/: test_cli.py  test_registry.py  test_scanner.py  test_scanner_new_checks.py  test_scanner_unit.py  test_scorer.py  test_scorer_unit.py
