[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-doctor"
version = "0.1.0"
description = "Scan, score, and install MCP servers with confidence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "xlyoung"}]
keywords = ["mcp", "model-context-protocol", "security", "ai", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-doctor = "mcp_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/xlyoung/mcp-doctor"
Repository = "https://github.com/xlyoung/mcp-doctor"
Issues = "https://github.com/xlyoung/mcp-doctor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_doctor*"]
